# mms-server

./: .clang-format  .gitignore  .gitmodules  3rd_lib.cmake  AUTHORS.md  CMakeLists.txt  Dockerfile  LICENSE  README.md  README_zh.md  docker-compose.yaml  mms项目结构文档.md  xmake.lua  xmake_guide.md
libs/base/: CMakeLists.txt  chunk.cpp  chunk.h  chunk_manager.cpp  chunk_manager.h  consistent_hash.hpp  lockfree_seq_pkt_buf.hpp  net_buffer.cpp  net_buffer.h  obj_tracker.hpp  packet.cpp  packet.h  sequence_pkt_buf.hpp  storage.h  wait_group.cpp  wait_group.h  xmake.lua
libs/base/network/: bitrate_monitor.cpp  bitrate_monitor.h  conn_pool.hpp  socket_interface.cpp  socket_interface.hpp  socket_traffic_observer.h  tcp_socket.cpp  tcp_socket.hpp  tls_socket.cpp  tls_socket.hpp  udp_socket.cpp  udp_socket.hpp
libs/base/thread/: thread_pool.cpp  thread_pool.hpp  thread_worker.cpp  thread_worker.hpp
libs/base/utils/: bit_stream.cpp  bit_stream.hpp  utils.cpp  utils.h
libs/codec/: CMakeLists.txt  codec.hpp  track.cpp  track.hpp  xmake.lua
libs/codec/aac/: aac_codec.cpp  aac_codec.hpp  aac_decoder.cpp  aac_decoder.hpp  aac_encoder.cpp  aac_encoder.hpp  adts.hpp  mpeg4_aac.cpp  mpeg4_aac.hpp
libs/codec/av1/: av1_codec.cpp  av1_codec.hpp  av1_define.cpp  av1_define.hpp
libs/codec/g711/: g711a_codec.hpp  g711u_codec.hpp
libs/codec/h264/: h264_avcc.cpp  h264_avcc.hpp  h264_codec.cpp  h264_codec.hpp  h264_nalu.h  h264_sps.cpp  h264_sps.hpp
libs/codec/hevc/: hevc_codec.cpp  hevc_codec.hpp  hevc_define.hpp  hevc_hvcc.cpp  hevc_hvcc.hpp  hevc_nalu.h
libs/codec/mp3/: mp3_codec.hpp
libs/codec/opus/: opus_codec.cpp  opus_codec.hpp  opus_encoder.cpp  opus_encoder.hpp
libs/protocol/: CMakeLists.txt  xmake.lua
libs/protocol/http/: CMakeLists.txt  http_define.cpp  http_define.h  http_parser.cpp  http_parser.hpp  http_request.cpp  http_request.hpp  http_response.cpp  http_response.hpp  http_server_session.cpp  http_server_session.hpp  ws_conn.cpp  ws_conn.hpp  xmake.lua
libs/protocol/mp4/: CMakeLists.txt  audio_sample_entry.cpp  audio_sample_entry.h  avcc.cpp  avcc.h  box.cpp  box.h  co64.cpp  co64.h  dinf.cpp  dinf.h  dref.cpp  dref.h  edts.cpp  edts.h  elst.cpp  elst.h  esds.cpp  esds.h  ftyp.cpp  ftyp.h  full_box.cpp  full_box.h  hdlr.cpp  hdlr.h  hvcc.cpp  hvcc.h  m4s_segment.cpp  mdat.cpp  mdat.h  mdhd.cpp  mdhd.h  mdia.cpp  mdia.h  mfhd.cpp  mfhd.h  minf.cpp  minf.h  moof.cpp  moof.h  (+57 more)
libs/protocol/rtmp/: CMakeLists.txt  rtmp_chunk_protocol.cpp  rtmp_chunk_protocol.hpp  rtmp_define.cpp  rtmp_define.hpp  rtmp_handshake.cpp  rtmp_handshake.hpp  xmake.lua
libs/protocol/rtp/: CMakeLists.txt  h264_rtp_pkt_info.cpp  h264_rtp_pkt_info.h  h265_rtp_pkt_info.cpp  h265_rtp_pkt_info.h  rtp_aac_depacketizer.cpp  rtp_aac_depacketizer.h  rtp_aac_nalu.h  rtp_au.h  rtp_h264_depacketizer.cpp  rtp_h264_depacketizer.h  rtp_h264_nalu.cpp  rtp_h264_nalu.h  rtp_h264_packet.cpp  rtp_h264_packet.h  rtp_h265_depacketizer.cpp  rtp_h265_depacketizer.h  rtp_h265_nalu.cpp  rtp_h265_nalu.h  rtp_h265_packet.cpp  rtp_h265_packet.h  rtp_header.cpp  rtp_header.h  rtp_packer.cpp  rtp_packer.h  rtp_packet.cpp  rtp_packet.h  xmake.lua
libs/protocol/rtsp/: CMakeLists.txt  rtsp_define.hpp  rtsp_request.cpp  rtsp_request.hpp  rtsp_response.cpp  rtsp_response.hpp  xmake.lua
libs/protocol/sdp/: CMakeLists.txt  sdp.cpp  sdp.hpp  xmake.lua
libs/protocol/ts/: CMakeLists.txt  ts_header.cpp  ts_header.hpp  ts_packer.hpp  ts_packet.hpp  ts_pat_pmt.hpp  ts_payload.hpp  ts_pes.cpp  ts_pes.hpp  ts_psi.cpp  ts_psi.hpp  ts_segment.cpp  ts_segment.hpp  xmake.lua
libs/sdk/http/: CMakeLists.txt  http_client.cpp  http_client.hpp  http_long_client.hpp  xmake.lua
libs/server/: CMakeLists.txt  session.cpp  session.hpp  xmake.lua
libs/server/tcp/: tcp_server.cpp  tcp_server.hpp
libs/server/tls/: tls_server.cpp  tls_server.hpp  tls_session.cpp  tls_session.h
libs/server/udp/: udp_server.cpp  udp_server.hpp
live-server/: CMakeLists.txt  main.cpp  version.h  version.h.in  xmake.lua
live-server/app/: app.cpp  app.h  app_manager.cpp  app_manager.h  play_app.cpp  play_app.h  publish_app.cpp  publish_app.h
live-server/bridge/: bridge_factory.cpp  bridge_factory.hpp  media_bridge.cpp  media_bridge.hpp
live-server/bridge/flv/: flv_to_rtmp.cpp  flv_to_rtmp.hpp  flv_to_rtsp.cpp  flv_to_rtsp.hpp  flv_to_ts.cpp  flv_to_ts.hpp
live-server/bridge/mp4/: m4s_to_mpd.cpp  m4s_to_mpd.hpp  mp4_to_mpd.cpp  mp4_to_mpd.hpp
live-server/config/: app_config.cpp  app_config.h  bridge_config.cpp  bridge_config.h  config.cpp  config.h  domain_config.cpp  domain_config.h  hls_config.cpp  hls_config.h  http_callback_config.cpp  http_callback_config.h  http_config.cpp  http_config.h  placeholder_generator.cpp  placeholder_generator.h  rtmp_config.cpp  rtmp_config.h  rtsp_config.cpp  rtsp_config.h
live-server/core/: error_code.hpp  flv_media_sink.cpp  flv_media_sink.hpp  flv_media_source.cpp  flv_media_source.hpp  hls_live_media_source.cpp  hls_live_media_source.hpp  m4s_media_sink.cpp  m4s_media_sink.hpp  m4s_media_source.cpp  m4s_media_source.hpp  media_event.cpp  media_event.hpp  media_sink.cpp  media_sink.hpp  media_source.cpp  media_source.hpp  media_source_finder.h  mp4_media_sink.cpp  mp4_media_sink.hpp  mp4_media_source.cpp  mp4_media_source.hpp  mpd_live_media_source.cpp  mpd_live_media_source.hpp  rtmp_media_sink.cpp  rtmp_media_sink.hpp  rtmp_media_source.cpp  rtmp_media_source.hpp  rtp_media_sink.cpp  rtp_media_sink.hpp  rtp_media_source.cpp  rtp_media_source.hpp  rtsp_media_sink.cpp  rtsp_media_sink.hpp  rtsp_media_source.cpp  rtsp_media_source.hpp  source_manager.cpp  source_manager.hpp  source_status.h  stream_session.cpp  (+7 more)
live-server/log/: log.cpp  log.h
live-server/recorder/: dash_recorder.cpp  dash_recorder.h  flv_recorder.cpp  flv_recorder.h  m4s_recorder.cpp  m4s_recorder.h  recorder.cpp  recorder.h  recorder_db.cpp  recorder_db.h  recorder_factory.cpp  recorder_factory.hpp  recorder_manager.cpp  recorder_manager.h  ts_recorder.cpp  ts_recorder.h
live-server/system/: system.cpp  system.h
(+758 files in other folders)
